--- a/consumer/src/main/resources/templates/Index.html
+++ b/consumer/src/main/resources/templates/Index.html
@@ -42,6 +42,7 @@
     <a href="/userRedis/List">列表</a>
     <a href="javascript:login()">登录</a>
     <a href="http://localhost:8088/shop/cart">添加购物车</a>
+    <a href="http://localhost:8088/shop/queryCart">商品列表</a>
 </body>
 
 </html>
