SpringBoot整合dubbo和redis实现token跨域

--- a/consumer/src/main/resources/templates/Index.html
+++ b/consumer/src/main/resources/templates/Index.html
@@ -43,6 +43,7 @@
     <a href="javascript:login()">登录</a>
     <a href="http://localhost:8088/shop/cart">添加购物车</a>
     <a href="http://localhost:8088/shop/queryCart">商品列表</a>
+    <a href="http://localhost:8088/order/orderList">订单</a>
 </body>
 
 </html>
