--- a/consumer/src/main/resources/templates/Index.html
+++ b/consumer/src/main/resources/templates/Index.html
@@ -44,6 +44,7 @@
     <a href="http://localhost:8088/shop/cart">添加购物车</a>
     <a href="http://localhost:8088/shop/queryCart">商品列表</a>
     <a href="http://localhost:8088/order/orderList">订单</a>
+    <a href="http://localhost:8090/miaosha/redisMiaosha">秒杀</a>
 </body>
 
 </html>
